# UWr

./: .gitignore
aisd/: 7.py  bfs.py  dfs.py  djikstra.py  kopiec.py  l1_z2.md  l1_z2_2.md  l3z2.py  piro_que_heap_od_0.py  priority_queue_heap.py
analiza-numeryczna/konkurs1/: get_points.py  punkty.txt  zad.py
analiza-numeryczna/lista1/: 2.txt  3.py  7.py  8.txt
analiza-numeryczna/lista2/: 7.py  8.py  9.py
analiza-numeryczna/lista3/: 1a.py  1b.py  1d.py
analiza-numeryczna/lista4/: 3.py  6.py  7-2.py  7.py  9.py  newton.py
analiza-numeryczna/lista7/: 4-2.py
analiza-numeryczna/lista9/: zad.py
artificial-intelligence/c1/: 3-cleanup-2.py  3-cleanup.py  3-random.py  (+6 more)
discrete-mathematics/: l9z11.py
language-models/: pyproject.toml
machine-learning/: pyproject.toml
machine-learning/assignment-1/: Exercise1.ipynb  ML_Assignment1_Ex3.ipynb  ML_Assignment1_Ex45.ipynb  ex-2.ipynb
machine-learning/assignment-2/: ex-1_2.ipynb  ex-3.ipynb  ex-4.ipynb
machine-learning/assignment-3/: ex-1.ipynb  ex-2.ipynb  ex-3.ipynb  ex-4.ipynb  ex-5.ipynb
machine-learning/assignment-3/ex-3/: solution.ipynb
machine-learning/assignment-4/: ex-1.ipynb  ex-2.ipynb  ex-3.ipynb
machine-learning/assignment-5/: ex-1.ipynb  ex-2.ipynb  ex-3.ipynb
mdl/: 1.py
neural-networks/: Assignment1.ipynb  Assignment2-part2.ipynb  Assignment2.ipynb  Assignment3.ipynb  Assignment4.ipynb
nn/: Assignment1.ipynb  or.ipynb
practical-software-development/: index.html
programowanie-obiektowe/: PO.sln  SmallApp.java
rpis/: octave-workspace  porownanie.m  z1.m
wstep-do-python/: wdi.py
(+971 files in other folders)
